# steamgifts-bot

./: .gitignore  .gitmodules  CMakeLists.txt  Duration.h  README.md  SteamGiftAcc  SteamGiftAcc.cpp  SteamGiftAcc.h  SteamGiftsBot  data.ini  main.cpp
.github/workflows/: main.yml
snap/: snapcraft.yaml
